--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -78,6 +78,16 @@ section {
   color: white;
 }
 
+#blood-pressure-title {
+  text-align:left;
+  display: block;
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#blood-pressure-phone {
+  margin-top: 200px;
+}
 
 h1 {
   position: absolute;
@@ -91,35 +101,11 @@ h1 {
   font-size: calc(1rem + 3vw);
 }
 
-/* .container {
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-
-  border: 2px solid var(--gs0);
-  border-radius: 8px;
-  height: 33vh;
+@media screen and (max-width: 1000px) {
+  #blood-pressure-title {
+    text-align:left;
+    display: block;
+    margin-top: 360px;
+    margin-left: 30px;
+  }
 }
-
-.container div {
-  scroll-snap-align: start;
-
-  height: 33vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-}
-.container div:nth-child(1) {
-  background: hotpink;
-  color: white;
-}
-.container div:nth-child(2) {
-  background: azure;
-}
-.container div:nth-child(3) {
-  background: blanchedalmond;
-}
-.container div:nth-child(4) {
-  background: lightcoral;
-  color: white;
-} */
