--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -80,7 +80,7 @@ section {
 
 #blood-pressure-title {
   text-align:left;
-  display: block;
+  /* display: block; */
   margin-top: 420px;
   margin-left: 30px;
 }
@@ -88,6 +88,48 @@ section {
 #blood-pressure-phone {
   margin-top: 200px;
 }
+
+/* ul {
+  list-style-type: none;
+  overflow: hidden;
+  padding: 0;
+}
+
+li {
+  transform: translateX(-100%);
+  transition: transform 0.5s, opacity 2s;
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+  transform: translateX(0%);
+}
+
+li {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    background: pink;
+    margin-bottom: 10px;
+}
+
+.myList li {
+    opacity: 0;
+    position: relative;
+    animation: fadeIn 600ms ease both;
+    animation-play-state: paused;
+}
+
+.myList.play li {
+    animation-play-state: running;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+} */
+
 
 h1 {
   position: absolute;
