--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,19 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {
   color: #1c676a;
   background-color: #52c4ca!important;
   font-family: "IBM Plex Sans";
   width: 100%;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 hr {
@@ -64,7 +75,7 @@ body > div.container-fluid {
 #wrapper {
   width: auto;
   margin-top: 70px;
-  padding: 0;
+
 }
 
 #wrapperClinic {
