--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -78,6 +78,20 @@ section {
   color: white;
 }
 
+#services-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#journal-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
 #blood-pressure-title {
   text-align:left;
   /* display: block; */
@@ -89,7 +103,49 @@ section {
   margin-top: 200px;
 }
 
-/* ul {
+#blood-sugar-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#cholesterol-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#vaccinations-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#body-weight-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#allergies-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+#medications-title {
+  text-align:left;
+  /* display: block; */
+  margin-top: 420px;
+  margin-left: 30px;
+}
+
+ul {
   list-style-type: none;
   overflow: hidden;
   padding: 0;
@@ -128,7 +184,7 @@ li {
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
-} */
+}
 
 
 h1 {
