--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,11 +65,13 @@ body > div.container-fluid {
 
 #title {
   color: white;
-  position: static;
-  text-align: right;
+  /* position: static;
+  text-align: right; */
   margin-right: 15px;
-  margin-top: 6px;
+  margin-top: 0px;
   z-index: 2;
+  position: fixed;
+  right: 30px;
 }
 
 #wrapper {
@@ -101,7 +103,7 @@ body > div.container-fluid {
   #title {
     color: white;
     position: fixed;
-    right: 30px;
+    right: 10px;
     margin-top: 11px;
     z-index: 2;
     font-size: 25px;
