--- a/assets/css/manager.css
+++ b/assets/css/manager.css
@@ -6,24 +6,26 @@ body{
 h1{
     color: #fff;
     font-size: 25px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     margin-top: 80px;
     text-align: center;
 }
 
-.content{
+.container-fluid{
     background: #fff;
-    max-width: 968px;
-    margin: 30px auto;
-    overflow-y: scroll;
-    padding:  20px 30px;
-    border-radius: 10px 120px 10px 10px;
+    max-width: 2000px;
+    /* margin: 30px auto; */
+    overflow-x: auto;
+    word-wrap: normal;
+    /* padding:  20px 30px; */
+    /* border-radius: 10px 120px 10px 10px; */
     box-shadow: 1px 3px 5px rgba(0,0,0,0.1)
 }
 
 ul{
     list-style-type: none;
     padding: 0;
+    display: inline-block;
 }
 
 li{
@@ -31,9 +33,11 @@ li{
     background: #f6f6f6;
     font-size: 10px;
     color: #555;
+    overflow-x: auto;
     position: relative;
     border-bottom: 1px solid #e6e6e6;
     height: 46px;
+    display: block;
 }
 
 li:nth-child(even){
@@ -254,4 +258,12 @@ button{
     font-family: ubuntu;
     letter-spacing: 1px;
     color: #999;
+}
+
+.content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
