--- a/assets/css/manager.css
+++ b/assets/css/manager.css
@@ -15,7 +15,7 @@ h1{
     background: #fff;
     max-width: 2000px;
     /* margin: 30px auto; */
-    overflow-x: auto;
+    /* overflow-x: auto; */
     word-wrap: normal;
     /* padding:  20px 30px; */
     /* border-radius: 10px 120px 10px 10px; */
@@ -25,7 +25,7 @@ h1{
 ul{
     list-style-type: none;
     padding: 0;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 li{
@@ -33,25 +33,25 @@ li{
     background: #f6f6f6;
     font-size: 10px;
     color: #555;
-    overflow-x: auto;
+    /* overflow-x: auto; */
     position: relative;
     border-bottom: 1px solid #e6e6e6;
     height: 46px;
-    display: block;
+    /* display: block; */
 }
 
-li:nth-child(even){
+/* li:nth-child(even){
     padding: 20px;
     background: #f2f2f8;
 
-}
+} */
 
-li span{
+/* li span{
     display: inline-table;
     overflow-y: scroll;
-}
+} */
 
-li span:nth-child(2){
+/* li span:nth-child(2){
     font-size: 12px;
     margin-top: 6px;
     color: #1c676a!important;
@@ -206,9 +206,9 @@ li span:nth-child(21){
     color: #999;
     margin-right: 3px;
     margin-left: 2px;
-}
+} */
 
-li div{
+/* li div{
     position: absolute;
     top: 0;
     right: 0px;
@@ -219,9 +219,9 @@ li div{
     font-weight:  bold;
     cursor:  pointer;
     margin-bottom: 10px;
-}
+} */
 
-form input{
+/* form input{
     float: left;
     width: 38%;
     margin: 0;
@@ -245,25 +245,54 @@ form:after{
     content: '';
     clear: both;
     display: block;
-}
+} */
 
-button{
+/* button{
     border: 0;
-    background: #fff;
+    background: #1c676a!important;
     border-radius: 10px;
     padding: 13px;
     width: 14%;
     box-shadow: -1px 0px 1px rgba(0,0,0,0.1);
     font-weight: bold;
-    font-family: ubuntu;
     letter-spacing: 1px;
     color: #999;
+} */
+
+.collapsible {
+  background-color: #1c676a!important;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #52c4ca!important;
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
 }
 
 .content {
+  width: 100%;
   padding: 0 18px;
-  background-color: white;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+  background-color: #52c4ca!important;
+  color: white;
 }
